fix scroll out div on mobile

--- a/style.css
+++ b/style.css
@@ -3,10 +3,12 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    max-width: 100vw;
     font-family: "Open Sans", sans-serif;
     font-size: 21px;
 
+}
+body {
+    max-width: 100vw;
 }
 .nav-container {
     display: flex;
@@ -14,6 +16,7 @@
     justify-content: space-between;
     padding: 0 50px;
     align-items: center;
+    width: 100%;
 }
 .nav-links {
     display: flex;
@@ -24,6 +27,7 @@
     display: inline-block;
     padding: 10px 15px;
     color: brown;
+    overflow: hidden;
 }
 .navbar:hover {
     cursor: pointer;
@@ -130,6 +134,9 @@ h1 {
 @media (max-width: 768px) {
     * {
         font-size: 21px;
+    }
+    .nav-container {
+        position: fixed;
     }
     .nav-links {
         display: flex;
